<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/actionbar_presentation"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".authentication_pages.FormRegister">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_title_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/title_sunshine_store"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/container_components"
        style="@style/container_components"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_title_store"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_register_name"
        style="@style/edit_text"
        android:hint="@string/edit_text_register_name"
        android:inputType="textPersonName"
        android:drawableEnd="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintTop_toTopOf="@id/container_components"
        app:layout_constraintTop_toBottomOf="@+id/container_components"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_register_email"
        style="@style/edit_text"
        android:hint="@string/edit_text_register_email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_register_name"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_register_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_register_name"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_register_password"
        style="@style/edit_text"
        android:hint="@string/edit_text_register_password"
        android:inputType="numberPassword"
        android:maxLength="22"
        app:layout_constraintStart_toStartOf="@id/edit_text_register_email"
        app:layout_constraintEnd_toEndOf="@id/edit_text_register_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_register_email"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_eye_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:src="@drawable/ic_eye"
        app:layout_constraintTop_toTopOf="@id/edit_text_register_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_register_password"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_register_password"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_eye_password_selected_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:src="@drawable/ic_eye"
        android:tint="@color/black"
        app:layout_constraintTop_toTopOf="@id/edit_text_register_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_register_password"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_register_password"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="@style/Buttons"
        android:text="@string/text_button_register"
        android:textSize="20sp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="155dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/edit_text_register_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_register_password"
        app:layout_constraintTop_toBottomOf="@+id/container_components"
        />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progressbar"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_register"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_alert_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/text_alert_progress"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_register"
        style="@style/Buttons"
        android:text="@string/text_button_login"
        android:textSize="20sp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/edit_text_register_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_register_password"
        app:layout_constraintTop_toBottomOf="@+id/container_components"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back_register"
        style="@style/Buttons"
        android:text="@string/text_button_back"
        android:textSize="20sp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>