<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/actionbar_presentation"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_title_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/title_sunshine_store"
            android:layout_margin="40dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_collections"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="@style/Buttons"
            android:text="@string/text_button_collections"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_title_store"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_home"
            style="@style/Buttons"
            android:text="@string/text_button_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_collections"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register_home"
            style="@style/Buttons"
            android:text="@string/text_button_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login_home"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>